Chapter II update

--- a/data/contributors.tex
+++ b/data/contributors.tex
@@ -41,11 +41,17 @@
 %Graduate study was supported by a fellowship from Texas A\&M University and a dissertation research fellowship from XXX Foundation.
 
 \subsection*{Contributors}
-This work was supported by a thesis (or) dissertation committee consisting of Professor XXXX [advisor --– also note if co-advisor] and XXX of the Department of [Home Department] and Professor(s) XXXX of the Department of [Outside Department].
+This work was supported by a dissertation committee consisting of Professors Ricardo Eusebi, Bhaskar Dutta, and Teruki Kamon of the Department of Physics and Astronomy and Professor Charles M. Folden of the Department of Chemistry.
 
-The data analyzed for Chapter X was provided by Professor XXXX. The analyses depicted in Chapter X were conducted in part by Rebecca Jones of the Department of Biostatistics and were published in (year) in an article listed in the Biographical Sketch.
 
-All other work conducted for the thesis (or) dissertation was completed by the student independently.
+%The data analyzed for Chapter X was provided by Professor XXXX. The analyses depicted in Chapter X were conducted in part by Rebecca Jones of the Department of Biostatistics and were published in (year) in an article listed in the Biographical Sketch.
+
+%paper co authors, salvatore, firas, machta, weigel, young, oliver, stefan, wenlong, double check acknowledgements 
+
+%FIX THIS
+
+All other work conducted for the dissertation was completed by the student independently.
+
 \subsection*{Funding Sources}
-Graduate study was supported by a fellowship from Texas A\&M University and a dissertation research fellowship from XXX Foundation. 
+Graduate study was supported by the Texas A\&M University System Louis Stokes Alliance for Minority Participation (TAMUS LSAMP) Bridge to the Doctorate (BTD) Cohort IX (2013-2015) Program National Science Foundation Award No. HRD-1249272.
 \pagebreak{}
