--- a/TAMUTemplateSP18.tex
+++ b/TAMUTemplateSP18.tex
@@ -87,22 +87,22 @@
 \renewcommand{\tamufullname}{Andrea Delgado}
 
 %The degree title goes here. See the OGAPS site for more info.
-\renewcommand{\tamudegree}{Master of Science}
-\renewcommand{\tamuchairone}{Chair Name}
+\renewcommand{\tamudegree}{Doctor of Philosopy}
+\renewcommand{\tamuchairone}{Ricardo Eusebi}
 
 
 % Uncomment out the next line if you have co-chairs.  You will also need to edit the titlepage.tex file.
 %\newcommand{\tamuchairtwo}{Additional Chair Name}
-\renewcommand{\tamumemberone}{Committee Member 1}
-\newcommand{\tamumembertwo}{Committee Member 2}
-\newcommand{\tamumemberthree}{Committee Member 3}
-\renewcommand{\tamudepthead}{Head of Department}
+\renewcommand{\tamumemberone}{Bhaskar Dutta}
+\newcommand{\tamumembertwo}{Teruki Kamon}
+\newcommand{\tamumemberthree}{Charles M. Folden}
+\renewcommand{\tamudepthead}{Grigory Rogachev}
 
 %Type only May, August, or December.
 \renewcommand{\tamugradmonth}{December}
-\renewcommand{\tamugradyear}{2017}
+\renewcommand{\tamugradyear}{2019}
 %Your department name goes here.
-\renewcommand{\tamudepartment}{Mathematics}
+\renewcommand{\tamudepartment}{Physics}
 
 
 \include{data/titlepage} % This is simply a file that formats and adds your titlepage, please do not edit this unless you have a specific need. .
@@ -116,8 +116,8 @@
 
 \include{data/section1}
 \include{data/section2}
-\include{data/section3}
-\include{data/section4}
+%\include{data/section3}
+%\include{data/section4}
 %The next line is the format for inserting new sections.
 %Replace the name "newsection"  with the name of your
 %new section file.
@@ -155,7 +155,7 @@
 %pointers if you end up changing the filenames.
 %Leave this commented if you will not need
 %appendix material.
-\include{data/appendices}
+%\include{data/appendices}
 
 
 \end{document}
