--- a/data/abstract.tex
+++ b/data/abstract.tex
@@ -19,13 +19,7 @@
 \pagenumbering{roman} % Roman numerals
 \setcounter{page}{2}
 
-\indent This is the first numbered page, lower case Roman numberal (ii). Page numbers are outside the prescribed margins, at the bottom of the page and centered; everything else is inside the margins.No bold on this page (Exception: heading ABSTRACT is bold if major headings are bold. \emph{This \LaTeX ~ template applies to this exception}).
-
-Text begins two double spaces below the major heading. Recommended length of text is no more than 350 words. Vertical spacing is double spaced or space-and-a-half. (\emph{This \LaTeX ~ template applies double space for this ABSTRACT.}) The same margin settings and text alignment are followed else where in this thesis. There should be no numbered references or formal citations in ABSTRACT.
-
-The content of this ABSTRACT provides a complete, succinct snapshot of the research, addressing the purpose, methods, results, and conclusions of the research. As a result, it should stand alone without any formal citations or references to chapters/sections of the work. To accomodate with a variety of online database, images or complex equations should also be avoided.
-
-The next pages are Dedication, Acknowledgments, Contributors and Funding Sources, and Nomenclature. Of these, Contributors and Funding Sources is required. The rest are optional.
+\indent The LHCb experiment has reported slight discrepancies in the ratio in which B mesons decay to muons and electrons. some of these theories attempting to explain these anomalies theorize the existence of new particles beyond the standard model. This study performs a search for a heavy neutral gauge boson at the LHC with the CMS experiment. This Z' boson is assumed to couple mostly to third generation fermions, specifically b-quarks. The main production channel is b-quark fusion. Furthermore, since the b-quark PDF's are at least 10 times lower when compared to the gluon PDF's, we take advantage of the large contribution of bottom quarks coming from gluon-splitting to Z' production. In short, a study for Z'$\rightarrow b\bar{b}$ decays is proposed. The final state consists of 4 b jets, with the two extra jets coming from the initial gluon splitting. Results are correspond to 27.27 $fb^{-1}$ of proton-proton collision data recorded by the CMS detector at the LHC with a center-of-mass-energy of 13 TeV during 2016.
 
 
  
