--- a/data/dedication.tex
+++ b/data/dedication.tex
@@ -19,7 +19,7 @@
 
 \begin{center}
 \vspace*{\fill}
-To my mother, my father, my grandfather, and my grandmother. To see what happens with multiple lines, I extend this next part into a second line.
+To Elvis, Simon, and Alice
 \vspace*{\fill}
 \end{center}
 
