--- a/data/section2.tex
+++ b/data/section2.tex
@@ -18,7 +18,7 @@
 \section{The Standard Model}
 Particle physics is the study of the fundamental constituents of matter and the forces between them. For more than 40 years these have been described by the so-called standard model of particle physics (SM), which provides, at least in principle, a basis for understanding most particle interactions, with the only exception of gravity.
 
-The SM can be understood as a gauge theory combining the theory of electroweak interactions(EW) and quantum chromodynamics(QCD), or $SU(3)\times SU(2) \times U(1)$. Several experiments have validated this theory to a great accuracy. However, we know the SM to be incomplete as it does not provide answers to questions like the origin of neutrino masses, the existence of dark matter, or that of dark energy.
+The SM can be understood as a gauge theory combining the theory of electroweak interactions(EW) and quantum chromodynamics(QCD), or $SU(3)\times SU(2) \times U(1)$. 
 
 \section{Structure and Particle Content}
 In this section, the particle content of the SM will be intriduced, along with the various force carriers. In the following section, the specifics of particle-particle interactions will be explained in detail.
@@ -42,28 +42,50 @@ Moreover, fermions are grouped into 3 families or generations of 4 particles (2 
 The SM bosons are the mediators of the interaction between the matter content of the SM, but also within themselves. They have integral spin quantum number and follow Bose-Einstein statistics. There are 5 named bosons, the gluons, photons, and W and Z with spin 1 since they go with vector fields, and the Higgs boson which corresponds to a scalar field and therefore has spin 0.
 
 \section{Particle Interactions}
-The interactions of the particles described in the previous section can be described in the mathematical framework of the gauge field theory. Three of the four fundamental forces of nature are described in the SM (electromagnetism, the strong and the weak force). Each force has its own corresponding charge, (i.e. electric charge, color or flavor) and has an associated boson as mediator.
+The interactions of the particles described in the previous section can be described in the mathematical framework of gauge field theory. Three of the four fundamental forces of nature are described in the SM (electromagnetism, the strong and the weak force). To each of these forces belongs a physical theory, its corresponding charge, (i.e. electric charge, color or flavor) and an associated boson as mediator.
 
-Modern theories describe these forces in terms of Quantum fields, namely QED, QCD and the unified electroweak quantum field theory. One feature all these theories have in commmon is that they are all gauge invariant. Gauge theories are of particular interest to particle physicists because their invariance under gauge transformations result in conservation laws and outline the rules of particle interactions, as we will see in the remainder of the section.  
+Modern theories describe these forces in terms of Quantum fields, namely QED, QCD and the unified electroweak quantum field theory. One feature all these theories have in commmon is that they are all gauge invariant. This is important because this is a fundamental requirement from which the detailed properties of the interaction are deduced.
+
+To describe each of the three SM interactions or forces, we will start with a Lagrangian that describes the dynamics of a given system of particles. Then we will take a look at the invariance of the Lagrangian after performing a local gauge transformation that will then require the introduction of gauge fields and their corresponding covariant derivatives. Finally, we will take a look at the conservation laws arising from the symmetry of the gauge invariance.
 
 \subsection{Quantum Electrodynamics}
 
-Quantum Electrodynamics (QED) describes the dynamics of the electromagnetic interaction. In this theory, spin 1/2 particles or fermions are represented by fields. It was the first discovered example of gauge symmetry, and it was developed from classical field theory, thus, the dynamics of a given system is completely specified by its Lagrangian.
+Quantum Electrodynamics (QED) describes the dynamics of the electromagnetic interaction between fermions and the boson mediating the interaction, the photon. QED corresponds to the $U_{EM}$ group and it was the first discovered example of gauge symmetry.% and it was developed from classical field theory.
 
-If we start with the Lagrangian density for a free electron of mass m:
+In QFT, particles are represented by fields, which are in turn represented mathematically by Lagrangian densities $\mathcal{L}$. QED is described by the Dirac Lagrangian density
+%If we start with the Lagrangian density for a free electron of mass m:
 
 \begin{equation}
 \mathcal{L} = \bar{\psi}(i\gamma^{\mu}\partial_{\mu} - m)\psi
 \end{equation}
 
-where $\gamma^{\mu}$ are the gamma matrices, $\phi$ is a 4-component column vector representing the elctron wave function and $\bar{\psi}=\psi^{\dagger}\gamma^{0}$. We will see that the Lagrangian is invariant under a global U(1) transformation when:
+where $\gamma^{\mu}$ are the gamma matrices, $\phi$ is a four-component column vector representing the wave function of a spin 1/2 particle (or Dirac spinor), $\bar{\psi}=\psi^{\dagger}\gamma^{0}$, and $m$ is the mass of the particle. The Lagrangian is invariant under a global U(1) transformation
 
 \begin{equation}
 \psi \rightarrow \psi '= e^{-i\alpha}\psi
 \end{equation}
-while the parameter $\alpha$ is kept a constant. If instead, $\alpha$ is allowed to vary as a function of spacetime, the Lagrangian is not invariant under the local transformation anymore. 
 
-In order to restore local gauge invariance, a gauge field $A_{\mu}$ representing the photon and the covariant derivative $D_{\mu} = \partial_{\mu} + iq A_{\mu}$ are introduced. The latter has the same transformation properties as the electron field and is chosen to replace $\partial_{\mu}$.
+while the parameter $\alpha$ is kept a constant. If instead, $\alpha$ is allowed to vary as a function of space-time, then equation (transformation) becomes a local U(1) transformation and the Lagrangian density becomes
+
+\begin{equation}
+\mathcal{L}\rightarrow \mathcal{L'} = \mathcal{L} + \bar{\psi}\gamma^{\mu}(\partial_{\mu}\alpha(x))\psi
+\end{equation}
+
+which is not invariant under the local transformation as is.
+
+In order to restore local gauge invariance, a gauge field $A_{\mu}$ representing the photon and the covariant derivative 
+
+\begin{equation}
+D_{\mu} = \partial_{\mu} + iq A_{\mu}
+\end{equation} 
+
+, where $q = -e$ (electric charge) are introduced. The new gauge field transforms as
+
+\begin{equation}
+A_{\mu}\rightarrow A'_{\mu} = A_{\mu} + \partial_{\mu}\chi(x)
+\end{equation}
+
+, where $\chi(x)$ is an arbitrary function of space-time. The covariant derivative has the same transformation properties as $\psi$ and is chosen to replace $\partial_{\mu}$.
 
 After introducing these modifications, the Lagrangian takes the form:
 
@@ -71,9 +93,11 @@ After introducing these modifications, the Lagrangian takes the form:
 \mathcal{L} = \bar{\psi}(i\gamma^{\mu}D_{\mu}-m)\psi - \frac{1}{4}F_{\mu\nu}F^{\mu\nu}
 \end{equation}
 
-where $F_{\mu\nu}= \partial_{\mu}A_{\nu} - \partial_{\nu}A_{\mu}$ is the electromagnetic field strenght tensor. As a result of local gauge invariance, the Lagrangian now includes the electron-photon interaction $e^{+}e^{-}\gamma$ and a term representing the photon kinetic energy.
+where $F_{\mu\nu}= \partial_{\mu}A_{\nu} - \partial_{\nu}A_{\mu}$ is the electromagnetic field strength tensor. 
 
-Finally, the Lagrangian can be generalized to include the muon and tau leptons:
+An interesting result is that the Lagrangian does not contain a mass term for the newly-introduced photon field (i.e. no term $~m^{2}A_{\mu}A^{\mu}$), which explains the infinite range of the electromagnetic interaction. 
+
+The final form of the Lagrangian includes lepton-photon interactions, those in the form of $l^{+}l^{-}\gamma$ and a quatric term in the field strngth tensor which is the photon kinetic energy. It can also be generalized to include all leptons by taking the form
 
 \begin{equation}
 \mathcal{L} = \sum_{i}\bar{\psi_{i}}(i\gamma^{\mu}D_{\mu}-m_{i})\psi_{i} - \frac{1}{4}F_{\mu\nu}F^{\mu\nu}
@@ -83,21 +107,86 @@ where $i=e,\mu,\tau,u,d,c,s,t,b$.
 
 \subsection{Electroweak Interaction}
 
-The electroweak interaction is based on a local $SU(2)\times U(1)$ gauge symmetry where L and Y are the generators of the symmetry. As a result, electromagnetic and weak interactions are unified into a single interaction. Also, just like in Section, the requirement of local gauge invariance leads to the introduction of gauge fields and determined the interactions mediated by those fields.
+The electroweak interaction is based on a local $SU(2)_{L}\times U(1)_{Y}$ gauge symmetry where $L $and $Y$ are the generators of the symmetry. As a result, electromagnetic and weak interactions are unified into a single non-abelian gauge theory. Also, just like in Section, the requirement of local gauge invariance leads to the introduction of gauge fields and determined the interactions mediated by those fields.
 
-The left-handed components of the elctron neutrino and electron are grouped into an SU(2) doublet. Since the right-handed component of the electron is invariant under SU(2), it is placed in a singlet, i.e.:
+In order to understand this unification, we will first work with a fermionic doublet representing an $SU(2)$ symmetry
 
 \begin{equation}
-L_{e} = (\nu_{e} e_{L}), e_{R}
+\psi = \begin{pmatrix}
+	\psi_{1}(x) \\
+	\psi_{2}(x)
+\end{pmatrix}, u_{R}, d_{R}
+\end{equation}
+
+which transforms under the three dimensional rotation
+
+\begin{equation}
+\psi\rightarrow exp<i\alpha^{i}\frac{\sigma_{i}}{2}>\psi
+\end{equation}
+
+which is the three dimensional version of eq. and $\sigma^{i}$ are the Pauli sigma matrices.
+
+Just like in the previous section, we allow the parameter $\alpha$ to vary as a function of space-time and thus
+
+\begin{equation}
+\psi(x)\rightarrow V(x)\psi(x)
+\end{equation}
+, where $V(x)= exp(i\alpha^{i}(x)\frac{\sigma^{i}}{2})$.
+
+In order to keep the Lagrangian invariant under this transformation, we introduce three vector fields $A_{\mu}^{i}(x)$ and the covariant derivative
+
+\begin{equation}
+D_{\mu} = \partial_{\mu} - igA_{\mu}^{i}\frac{\sigma^{i}}{2}
+\end{equation}
+
+and therefore
+
+\begin{equation}
+A_{\mu}^{i}(x)\frac{\sigma^{i}}{2}\rightarrow V(x)(A_{\mu}^{i}(x)\frac{\sigma^{i}}{2}+\frac{i}{g}\partial_{\mu})V^{\dagger}(x)
+\end{equation}
+
+To simplify this calculation, we can expand $V(x)$ to first order in $\alpha$ 
+
+\begin{equation}
+A_{\mu}^{i}\frac{\sigma^{i}}{2}\rightarrow A_{\mu}^{i}\frac{\sigma^{i}}{2} + \frac{1}{g}(\partial_{\mu}\alpha^{i})\frac{\sigma^{i}}{2} + i[\alpha^{i}\frac{\sigma^{i}}{2}, A_{\mu}^{i}\frac{\sigma^{i}}{2}] + ...
+\end{equation}
+
+The covariant derivative will have the form
+
+\begin{equation}
+D_{\mu}\psi\rightarrow(1+i\alpha^{i}\frac{\sigma^{i}}{2})D_{\mu}\psi
+\end{equation}
+
+and the field strength tensor will be
+
+\begin{equation}
+F_{\mu\nu}^{i} = \partial_{\mu}A_{\nu}^{i} - \partial_{\nu}A_{\mu}^{i} + g\epsilon^{ijk}A_{\mu}^{j}A_{\nu}^{k}
+\end{equation}
+and the Yang-Mills Lagrangian becomes
+
+\begin{equation}
+\mathcal{L} = -\frac{1}{4}(F_{\mu\nu}^{i})^{2}+\bar{\psi}(i\gamma^{\mu}\partial_{\mu}-igA_{\mu}^{i}\frac{\sigma^{i}}{2})\psi
+\end{equation}
+
+Now we can obtain the interaction by following the same procedure as in the previous section, i.e., requiring local gauge invariance in the Lagrangian and introducing new gauge fields and covariant derivatives.
+
+First we should note that the SM fermions possess a fundamental property called chirality, which describes how a given particle's wave function behaves under rotation. In the SM, the left-handed components of the electron neutrino and electron are grouped into an SU(2) doublet. Since the right-handed component of the electron is invariant under SU(2), it is placed in a singlet, i.e.:
+
+\begin{equation}
+L_{e} = \begin{pmatrix}
+	\nu_{e} \\
+	e_{L}
+\end{pmatrix}
+, e_{R}
 \end{equation}
  And so on for the heavier generations of leptons. So far, there is no evidence of right-handed neutrinos in the SM.
 
- The dynamic portion of the electroweak Lagrangian for first generation leptons can be represented by:
+ The kinetic energy term of the electroweak Lagrangian for first generation leptons can be represented by:
 
  \begin{equation}
- \mathcal{L}_{dyn}^{e} = L_{e}^{\dagger}\sigma^{\mu}i\partial_{\mu}L_{e}+ e_{R}^{\dagger}\sigma^{\mu}i\partial_{\mu}e_{R}% CHECK should be sigma tilde
+ \mathcal{L}_{KE}^{e} = L_{e}^{\dagger}\tilde{\sigma}^{\mu}i\partial_{\mu}L_{e}+ e_{R}^{\dagger}\sigma^{\mu}i\partial_{\mu}e_{R}
  \end{equation}
-where $\sigma = (\sigma^{0}, \sigma^{1},\sigma^{2}, \sigma^{3})$, $\sigma = (\sigma^{0}, -\sigma^{1},-\sigma^{2}, -\sigma^{3})$, $\sigma^{0}$ is the identity matrix, and the $\sigma^{i}$ are the Pauli matrices. This Lagrangian is invariant under the global transformation:
+where $\sigma = (\sigma^{0}, \sigma^{1},\sigma^{2}, \sigma^{3})$, $\tilde{\sigma} = (\sigma^{0}, -\sigma^{1},-\sigma^{2}, -\sigma^{3})$, $\sigma^{0}$ is an identity matrix, and the $\sigma^{i}$ are the Pauli matrices. This Lagrangian is invariant under the global $SU(2)_{L}\times U(1)_{Y}$ transformation:
 
 \begin{equation}
 L\rightarrow L' = e^{i\theta}UL\\
@@ -113,7 +202,8 @@ where
 U = e^{-ia^{k}\sigma^{k}}
 \end{equation}
 
-and $\theta$ and $a^{k}$ are real numbers parameterizing the transformation. However, the Lagrangian is not invariant under a transformation where these parameters are allowed to vary as a function of space-time, i.e. a local transformation.
+and $\theta$ and $a^{k}$ are real numbers parameterizing the transformation.
+ However, the Lagrangian is not invariant under a transformation where these parameters are allowed to vary as a function of space-time, i.e. a local transformation.
 
 Following the same reasoning as in the previous section, we can introduce gauge fields and replace the space-time derivatives with an appropiately chosen covariant derivative. This time, we introduce a U(1) gauge field $B_{\mu}(x)$ and three SU(2) gauge fields $W_{\mu}(x)= W_{\mu}^{k}(x)\sigma_{k}$. Such fields must transform as
 
@@ -134,19 +224,39 @@ D_{\mu}L_{e} = (\partial_{\mu}+i\frac{g_{1}}{2}YB_{\mu}+i\frac{g_{2}}{2}W_{\mu})
 D_{\mu}e_{R} = (\partial_{\mu}+i\frac{g_{1}}{2}YB_{\mu})e_{R}
 \end{equation}
  
- where Y is the hypercharge operator, whose values are listed in Table 
+ where Y is the hypercharge operator, whose eigenvalues are listed in Table 2.1. The weak hypercharge can be calculated as $Y=2(Q-T_{3})$, where $T_{3}$ is the third component of the weak isospin quantum number $T$.
 
- These covariant derivatives transform according to the same rule as the fields themselves. The Lagrangian Eq becomes
+ \begin{table}[h!]
+	\centering
+	\label{qun}
+	\begin{tabular}{|l|l|l|l|l|l|l|}
+		%\centering
+		\hline
+		                & Particle & Q   & $T_{3}$ & Y & B & L \\ \hline
+		Quarks          & $q_{L} = \begin{pmatrix}
+									u \\
+									d
+									\end{pmatrix}_{L}$ & $\begin{pmatrix} 2/3 \\ -1/3 \end{pmatrix}$  & $\begin{pmatrix} 1/2 \\ -1/2 \end{pmatrix}$ & 1/3 & 1/3 & 0 \\ 
+		                & $u_{R}$ & 2/3 & 0 & 4/3 & 1/3 & 0 \\ 
+		                & $d_{R}$ & -1/3& 0 & -2/3 & 1/3 & 0 \\ \hline
+		Leptons         & $l_{L} = \begin{pmatrix} \nu_{e}\\ e \end{pmatrix}_{L}$ & $\begin{pmatrix} 0 \\ -1 \end{pmatrix}$ & $\begin{pmatrix} 1/2 \\ -1/2 \end{pmatrix}$ & -1 & 0 & 1 \\
+		                & $e_{R}$ & -1 & 0 & -2 & 0 & 1 \\ \hline
+	
+	\end{tabular}
+	\caption{Quantum numbers of the SM fermions}
+\end{table}
+
+ These covariant derivatives transform according to the same rule as the fields themselves. Combining the kinetic and gage interaction terms of the Lagrangian yields
 
  \begin{equation}
- \mathcal{L}^{e}_{dyn} = L_{e}^{\dagger}\tilde{\sigma}^{\mu}iD_{\mu}L_{e}+e_{R}^{\dagger}\sigma^{\mu}iD_{\mu}e_{R} - \frac{1}{4}B_{\mu\nu}B^{\mu\nu}- \sum_{i=1}^{3}\frac{1}{4}W_{\mu\nu}^{i}W^{i\mu\nu}
+ \mathcal{L} = \mathcal{L}_{KE} + \mathcal{L}_{gauge}= L_{e}^{\dagger}\tilde{\sigma}^{\mu}iD_{\mu}L_{e}+e_{R}^{\dagger}\sigma^{\mu}iD_{\mu}e_{R} - \frac{1}{4}B_{\mu\nu}B^{\mu\nu}- \sum_{i=1}^{3}\frac{1}{4}W_{\mu\nu}^{i}W^{i\mu\nu}
  \end{equation}
 
- where $B_{\mu\nu}=\partial_{\mu}B_{\nu}-\partial_{\nu}B_{\mu}$ and $W_{\mu\nu} = [\partial_{\mu}+(\frac{ig_{2}}{2})W_{\mu}]W_{\nu} - [\partial_{\nu}+(\frac{ig_{2}}{2})W_{\nu}]W_{\mu}$ are the field strength tensors, allowing for the Lagrangian to be locally gauge invariant.
+ where $B_{\mu\nu}=\partial_{\mu}B_{\nu}-\partial_{\nu}B_{\mu}$ and $W_{\mu\nu} = [\partial_{\mu}+(\frac{ig_{2}}{2})W_{\mu}]W_{\nu} - [\partial_{\nu}+(\frac{ig_{2}}{2})W_{\nu}]W_{\mu}$ are the field strength tensors. This Lagrangian is now locally invariant.
 
  The mediators of the electroweak force are the physical bosons $W^{\pm}$, the Z and the photon. All these are combinations of the gauge fields in the following way. 
 
- The $W^{\pm}$ are linear combinations of the $W_{1}$ and $W_{2}$, which are electrically chargede and given by
+ The $W^{\pm}$ are linear combinations of the $W_{1}$ and $W_{2}$, which are electrically charged and given by
 
  \begin{equation}
 W_{\mu}^{\pm} = \frac{W_{\mu}^{1}\mp i W_{\mu}^{2}}{\sqrt{2}}
@@ -170,7 +280,7 @@ We can also see from here that the interaction strength is equal to the electrom
 Finally, in order to include second and third generation leptons, the Lagrangian generalizes to 
 
 \begin{equation}
-\mathcal{L}^{l}_{dyn} = \sum_{leptons}(L_{e}^{\dagger}\tilde{\sigma}^{\mu}iD_{\mu}L_{e}+e_{R}^{\dagger}\sigma^{\mu}iD_{\mu}e_{R}) - \frac{1}{4}B_{\mu\nu}B^{\mu\nu}- \sigma_{i=1}^{3}\frac{1}{4}W_{\mu\nu}^{i}W^{i\mu\nu}
+\mathcal{L}^{l} = \sum_{leptons}(L_{e}^{\dagger}\tilde{\sigma}^{\mu}iD_{\mu}L_{e}+e_{R}^{\dagger}\sigma^{\mu}iD_{\mu}e_{R}) - \frac{1}{4}B_{\mu\nu}B^{\mu\nu}- \sigma_{i=1}^{3}\frac{1}{4}W_{\mu\nu}^{i}W^{i\mu\nu}
 \end{equation}
 
 Quarks are included in the electroweak sector in a similar manner. The left-handed components of the $u$ and $d$ quark are place in SU(2) doublets, and the right-handed components in singlets.
@@ -184,33 +294,229 @@ Q_{u} = \begin{pmatrix}
 Two additional doublets and four singlets exist for the second and third generation quarks. The covariant derivatives acting on the quark fields are the same as those which act on the lepton fields, but the quarks have different weak hypercharge assignments from the leptons. Therefore, the dynamic portion of the $u$ and $d$ quark Lagrangian is given by:
 
 \begin{equation}
-\mathcal{L}^{q}_{dyn} = \sum_{quarks}Q_{u}^{\dagger}\tilde{\sigma}^{\mu}iD_{\mu}Q_{\mu}+u_{R}^{\dagger}\sigma^{\mu}iD_{\mu}u_{R}+d^{\dagger}_{R}\sigma^{\mu}iD_{\mu}d_{R}
+\mathcal{L}^{q}_{KE} = \sum_{quarks}Q_{u}^{\dagger}\tilde{\sigma}^{\mu}iD_{\mu}Q_{\mu}+u_{R}^{\dagger}\sigma^{\mu}iD_{\mu}u_{R}+d^{\dagger}_{R}\sigma^{\mu}iD_{\mu}d_{R}
 \end{equation}
-Again, the W bosons couple only to the left-handed quark kcomponents, while the Z and photon couple to the right-handed components as well.
+Again, the W bosons couple only to the left-handed quark components, while the Z and photon couple to the right-handed components as well.
 
-The dynamic portion of the electroweak Lagrangian is a result of the addition of the lepton and quark components
+The full electroweak Lagrangian is a result of the addition of the lepton and quark kinetic components, as well as the gauge interaction component.
 
 \begin{equation}
-\mathcal{L}^{EW}_{dyn} = \mathcal{L}^{l}_{dyn} + \mathcal{L}_{dyn}^{q}
+\mathcal{L}^{EW} = \mathcal{L}^{l}_{KE} + \mathcal{L}_{KE}^{q} + \mathcal{L}_{gauge}
 \end{equation}
 
-Here, we should notice that a couple of symmetries arise from the form of the Lagrandian in Eq. If a U(1) transformation of the form $L_{e,\mu,\tau}\rightarrow e^{i\alpha}L_{e,\mu,\tau}$, $e,\mu,\tau_{R}\rightarrow e,\mu,\tau^{i\alpha}e,\mu,\tau_{R}$ leaves the Lagrangian invariant, which leads to conservation of lepton number. Additionally, a U(1) transformation multiplying all negatively (positively) charged fields by $e^{i\alpha}(e^{-i\alpha})$ leaves the Lagrangian invariant, and implies conservation of electric charge.
+Here, we should notice that a couple of symmetries arise from the form of the Lagrangian in Eq. If a U(1) transformation of the form $L_{e,\mu,\tau}\rightarrow e^{i\alpha}L_{e,\mu,\tau}$, $e,\mu,\tau_{R}\rightarrow e,\mu,\tau^{i\alpha}e,\mu,\tau_{R}$ leaves the Lagrangian invariant, which leads to conservation of lepton number. Additionally, a U(1) transformation multiplying all negatively (positively) charged fields by $e^{i\alpha}(e^{-i\alpha})$ leaves the Lagrangian invariant, and implies conservation of electric charge.
 
 On the other hand, the EW Lagrangian is not invariant under charge conjugation $C$ of a parity conservation $P$. Charge conjugation is the operation of changing the sign of all discrete quantum numbers, or equivalently exchanging all particles with antiparticles and vice-versa. A parity transformation is the inversion of spatial coordinates, $r\rightarrow -r$. The neutral current interactions, mediated by the Z and photon, preserve combined CP invariance. However, even combined CP symmetry is violated by weak current interactions, mediated by the $W^{\pm}$, in the quark sector. A third important potential symmetry is time reversal $T$, where $t\rightarrow -t$. Combined CPT invariance is required to mantain Lorentz invariance. Therefore, the breaking of CP also implied the breaking of T symmetry.
 
-The SM can be understood in terms of its particle content, the so-called fermions and the mediators of the interactions
+Finally, a notable property of the weak interaction is that it only acts on particles with weak isospin quantum number T and that $T_{3}$ is conserved in all interactions.
 
-The matter content of the SM can be classified into two categories, according to the particle's spin. Particles with half-integer spin are referred to fermions, while those having integer spin are usually referred to as bosons.
+\subsection{Strong Interaction}
 
-Fermions follow Dirac-Fermi statistics interact electromagnetically, except for the neutrinos and can be further classified into leptons and quarks, which interact via the strong force.
+	Quantum Chromodynamics is the theory that describes the interaction between quarks via the strong force. It is represented by a local $SU(3)_{C}$ gauge symmetry and the interaction mediator is the gluon.
 
-Bosons follow Bose-Einstein statistics and provide the mechanism by which the matter particles, i.e. the fermions interact with each other. The gluon, photon, W, and Z bosons all have spin-1 and are responsible for the strong, electromagnetic, and weak interaction, respectively.
+	Its corresponding charge is the color. Color charges can be green, red, and blue but only color neutral (or colorless) hadrons are allowed in nature. Baryons contain equal parts of each color and mesons contain color-anticolor pairs.
 
-The final piece of the SM if the Higgs boson, which is the only spin-0 boson and is responsible for the masses of the other particles in the SM.
+	In QCD, quarks are represented in this theory as color triplets
 
-But how do these particles arise?
+	\begin{equation}
+	q_{u} = 
+	\begin{pmatrix}
+		u_{r} \\
+		u_{g}\\
+		u_{b}
+	\end{pmatrix}
+	\end{equation}
 
+	and gluons contain two color charges. The eight known combinations of color charges for the gluon are represented by eight gauge fields that will be introduced below.
 
+	As in the previous sections, we start building the interaction from an $SU(3)$ Lagrangian that is globally invariant in the form
+
+	\begin{equation}
+	\mathcal{L}^{q}_{QCD} = \sum_{i=1}^{6}\bar{q}_{i}i\gamma^{\mu}\partial_{\mu}q_{i}
+	\end{equation}
+
+	This Lagrangian is invariant under a transformation of the form $q_{i}\rightarrow q_{i}' = Uq_{i}$ where $U$ is a member is a member of $SU(3)$. If we allow for a transformation of the for $U(x)$, the Lagrangian is no longer invariant. To return invariance, we introduce 8 gauge fields ($G_{\mu}(x)$), which represent the gluons and an appropiate covariant derivative.
+	
+	The transformation of the gauge fields and the covariant derivative will take the form:
+		\begin{equation}
+		G_{\mu}\rightarrow G'_{\mu} = UG_{\mu}U^{\dagger}+\frac{i}{g_{s}}(\partial_{\mu}U)U^{\dagger}
+		\end{equation}
+		\begin{equation}
+		D_{\mu}q_{i} = (\partial_{\mu}+ig_{s}G_{\mu})q_{i}
+		\end{equation}
+		where $g_{s}$ is the dimensionless coupling strength of the color interaction.
+	The field strength tensor for QCD is:
+		\begin{equation}
+		G_{\mu\nu} = \partial_{\mu}G_{\nu} - \partial_{v}G_{\mu} + ig_{s}(G_{\mu}G_{\nu} - G_{\nu}G_{\mu})
+		\end{equation}
+	and the locally $SU(3)$ gauge invariant QCD Lagrangian is then given as:
+		\begin{equation}
+		\mathcal{L}^{q}_{QCD} = \sum_{i=1}^{6}(\bar{q}_{i}i\gamma^{\mu}D_{\mu}q_{i})-\frac{1}{4}\sum_{i=1}^{8}G_{\mu\nu}^{i}G^{i\mu\nu}
+		\end{equation}
+
+	In contrast to the EW interaction, C,P, and T are all conserved. The Strong force interaction range is about $10^{-15}$ which is enough to act on nucleons, i.e. protons and neutrons to form atomic nuclei.
+	
+	QCD is a strongly coupled theory at low energies and large distance scales and weakly interacting at high energies and small distance scales. This fact is responsible for the hadronic bound states of quarks.
+		%\item Asymptotic freedom, strong force between quarks increases as they move farther apart until energy is so large that nature prefers to create a new quark-antiquark pair.
+	At low energy scales, i.e. non-perturbative regime, QCD calculations are extremely difficult and techniques as lattice gauge theory must be exploited.
+	On the other hand, at a high energy scale, or equivalently small distance scales, the strong interaction becomes weakly interacting and quarks are effectively free. In this regime the usual techniques of perturbation theory can be used, allowing high-precision calculations.
+
+\subsection{Brout-Englert-Higgs Mechanism and the Higgs Boson}
+	As we have seen from the previous section, the EW and QCD Lagrangians do not contain any mass terms. This implies that the SM bosons should be massless, which contradicts the experimental results since the $W^{\pm}$ and Z bosons do indeed have mass. This is a result of the requirement of local $SU(3)_{C}\times SU(2)_{L}\times U(1)_{Y}$ gauge invariance in the Lagrangian.
+
+	The Brout-Englert-Higgs mechanism allows for W and Z bosons to have mass while preserving gauge invariance by adding one or more complex scalar fields, the Higgs field(s) to the SM Lagrangian. These fields will acquire a vacuum expectation value which will spontaneously break the symmetry of the Lagrangian. 
+
+	The Goldstone theorem tells us that for every spontaneously broken continuous symmetry there will be a new massive scalar "Goldstone" boson. The number of new bosons will be equal to the number of broken generators of the symmetry group. The massless SM bosons then acquire mas by absorbing these Goldstone bosons.
+	
+	THe BEH mechanism is also used to generate mass for the quarks and electrically charged leptons. The neutrinos, photon, and gluons remain massless, as observed experimentally.
+	
+	Remember from previous section that there are four massless electroweak gauge bosons, $W^{1}, W^{2}, W^{3}$, and $B^{0}$. The experimentally observed bosons, however, are the massless photon, and three massive bosons (the $W^{\pm}$ and Z). We also know that electric charge Q is conserved in electroweak interactions. This means that the $SU(2)_{L}\times U(1)_{Y}$ electroweak theory is broken such that a new $U(1)_{EM}$ symmetry group is formed which corresponds to electromagnetism. 
+	
+	In order for three gauge bosons to acquire mass they must absorb three Goldstone bosons. The simplest method to acomplish this is to introduce a complex, scalar $SU(2)$ doublet $\Phi$ with hypercharge $Y=1$.
+	\begin{equation}
+		\Phi = \begin{pmatrix}
+		\Phi_{A} \\
+		\Phi_{B}
+		\end{pmatrix} = \begin{pmatrix} \phi_{1} \\ i\phi_{2} \\ \phi_{3} \\ i\phi_{4} \end{pmatrix},
+	\end{equation}
+
+	The part of the SM Lagrangian which includes the electroweak gauge bosons and the leptons can be written as
+
+	\begin{equation}
+	\mathcal{L}_{SM} = -\frac{1}{4}W_{\mu\nu}^{a}W_{a}^{\mu\nu} - \frac{1}{4}B_{\mu\nu}B^{\mu\nu} + \bar{L}_{i}(iD_{\mu}\gamma^{\mu})L_{i} + \bar{e}_{R,i}(iD_{\mu}\gamma^{\mu})e_{R,i}
+	\end{equation}
+
+	where $i$ runs over the three generations, $\mu$ and $\nu$ are Lorentz indices, and $a$ runs over the generators in the gauge group. The field strengths are given by
+
+	\begin{equation}
+	W_{\mu\nu}^{a} = \partial_{\mu}W_{\nu}^{a} - \partial_{\nu}W_{\mu}^{a} + g_{2}\epsilon^{abc}W_{\mu}^{b}W_{\nu}^{c}
+	\end{equation}
+	\begin{equation}
+	B_{\mu\nu} = \partial_{\mu}B_{\nu} - \partial_{\nu}B_{\mu}
+	\end{equation}
+
+	and the covariant derivatives for the left- and right-handed leptons are
+
+	\begin{equation}
+	D_{\mu}L_{L} = (\partial_{\mu}- ig_{2}T_{a}W_{\mu}^{a}-ig_{1}YB_{\mu})L_{L}
+	\end{equation}
+	\begin{equation}
+	D_{\mu}e_{R} = (\partial_{\mu}- ig_{1}YB_{\mu})e_{R}
+	\end{equation}
+
+	where $T_{a}$ are the generators of the $SU(2)_{L}$ gauge group and $g_{1},g_{2}$ are the coupling constants for the electroweak interaction.
+
+	The scalar part of the Lagrangian required by the addition of a scalar field is then
+		\begin{equation}
+			\mathcal{L}_{S} = (D_{\mu}\Phi)^{\dagger}(D^{\mu}\Phi) - V(\Phi^{\dagger}\Phi)
+		\end{equation}
+
+	where the first term is the kinetic term and the second term is the scalar potential. While the form of the scalar potential is not known from first principles, we can make the assumption that it takes the simplest form possible which has the desired properties of spontaneous symmetry breaking and the ability to be renormalized. Then
+
+		\begin{equation}
+		V(\Phi^{\dagger}\Phi) = \mu^{2}\Phi^{\dagger}\Phi+\lambda(\Phi^{\dagger}\Phi)^{2}
+		\end{equation}
+
+	The value of $\lambda$ must be positive in order for the vacuum to be stable. The sign of $\mu^{2}$ specifies one of two cases for the potential.
+
+	\begin{itemize}
+			\item When $\mu^{2}>0$, the potential $V(\Phi)$ is always positive and has a minimum at
+
+			\begin{equation}
+			<0|\Phi|0>\equiv\Phi_{0} = \begin{pmatrix} 0 \\ 0 \end{pmatrix}
+			\end{equation}
+
+			where no spontaneous symmetry breaking can occur. 
+
+			\item When $\mu^{2}<0$ the potential has a minimum value not located at the origin. In this case, the neutral component of the scalar field will acquire a vacuum expectation value $v$, a process that we will refer to as electroweak symmetry breaking (EWSB).
+
+			\begin{equation}
+			<0|\Phi|0> = \Phi_{0} = \frac{1}{\sqrt{2}}\begin{pmatrix} 0 \\ v \end{pmatrix}
+			\end{equation}
+
+			where $v=\sqrt{\frac{-\mu^{2}}{\lambda}}$
+	\end{itemize}
+
+	
+	By only adding a $vev$ to the neutral component of the scalar field, electromagnetism is unbroken and the $U(1)_{EM}$ symmetry keeps a conserved electric charge $Q=T_{3}+\frac{Y}{2}$.
+
+	We can then expand the scalar field $\Phi$ around the minimum $\Phi_{0}$ to get 
+
+		\begin{equation}
+			\Phi(x) = \frac{1}{\sqrt{2}}\begin{pmatrix} 0 \\ v + h(x) \end{pmatrix}
+		\end{equation}
+
+	where $h(x)$ is a new scalar field.
+
+	Next we insert this field into the kinetic part of the Lagrangian and redefine the gauge fields as 
+
+		\begin{equation}
+		W_{\mu}^{\pm} = \frac{1}{\sqrt{2}}(W_{\mu}^{1}\mp iW_{\mu}^{2})
+		\end{equation}
+
+		\begin{equation}
+		Z_{\mu} = \frac{1}{\sqrt{g_{1}^{2}+g_{2}^{2}}}(g_{2}W_{\mu}^{3}-g_{1}B_{\mu})
+		\end{equation}
+
+		\begin{equation}
+		A_{\mu} = \frac{1}{\sqrt{g_{1}^{2}+g_{2}^{2}}}(g_{2}W_{\mu}^{3}+g_{1}B_{\mu})
+		\end{equation}
+
+		which correspond to the observed gauge bosons. 
+
+	After this the covariant derivative becomes
+
+		\begin{equation}
+		|D_{\mu}\Phi|^{2} = \frac{1}{2}(\partial_{\mu}H)^{2}+\frac{1}{2}g_{2}^{2}(v+H)^{2}W_{\mu}^{+}W^{\mu-}+\frac{1}{8}(v+H)^{2}(g_{1}^{2}+g_{2}^{2})Z_{\mu}Z^{\mu}
+		\end{equation}
+
+	From here we can see that the photon $A_{\mu}$ remains massless, but that the mass terms for the $W$ and $Z$ bosons take the general forms $M_{W}^{2}W_{\mu}W^{\mu}$ and $M_{Z}^{2}Z_{\mu}Z^{\mu}/2$ respectively.
+
+	Thus the masses of the electroweak gauge bosons are
+
+		\begin{equation}
+		M_{W} = \frac{1}{2}vg_{2}
+		\end{equation}
+		\begin{equation}
+		M_{Z}= \frac{1}{2}v\sqrt{g_{1}^{2}+g_{2}^{2}}
+		\end{equation}
+		\begin{equation}
+		M_{A} = 0
+		\end{equation}
+
+	Three of the degrees of freedom from the scalar field, which would have been two charged and one neutral Goldstone boson, have been absorbed by the gauge bosons in order to give them mass. There is one remaining degree of freedom, an oscillation in the radial direction of the scalar potential, which corresponds to the neutral Higgs boson.
+
+	Finally, fermions acquire mass by adding couplings between the fermion fields and the scalar field to the SM Lagrangian. The part of the Lagrangian that corresponds to the first generation fermions is given by
+
+		\begin{equation}
+		\mathcal{L}_{F} = -G_{e}\bar{L}\Phi e_{R} - G_{d}\bar{Q}\Phi d_{R} - G_{u}\bar{Q}\tilde{\Phi}u_{R}+h.c.
+		\end{equation}
+
+	where $\tilde{\Phi}=i\tau_{2}\Phi^{*}$ is the conjugate of $\Phi$ with negative hypercharge.
+
+	There are additional terms added to the full Lagrangian which correspond to the second and third generations which are not shown here.
+
+	By substituting $\Phi$ into the previous Lagrangian we find
+
+		\begin{align}
+		\mathcal{L}_{F} &= -\frac{1}{\sqrt{2}}[G_{e}\begin{pmatrix} \bar{\nu} & \bar{e} \end{pmatrix}_{L}\begin{pmatrix} 0 \\ v+H \end{pmatrix}e_{R}+G_{d}\begin{pmatrix}\bar{u} & \bar{d}\end{pmatrix}_{L}\begin{pmatrix} 0 \\ v+H \end{pmatrix}d_{R} + G_{u}\begin{pmatrix}\bar{u} & \bar{d}\end{pmatrix}_{L}\begin{pmatrix} 0 \\ v+H \end{pmatrix}u_{R}] + h.c. \\
+		&= -\frac{1}{\sqrt{2}}(v+H)(G_{e}\bar{e}_{L}e_{R}+G_{d}\bar{d}_{L}d_{R}+G_{u}\bar{u}_{L}u_{R})+h.c. 
+		\end{align}
+
+	where $h.c.$ is a placeholder for the hermitian conjugate terms. 
+
+	The fermion masses take the form $m\bar{f}_{L}f_{R} + h.c.$, which means that the fermion masses for the first generation are
+
+		\begin{equation}
+		m_{e} = \frac{G_{e}v}{\sqrt{2}}, m_{u}=\frac{G_{u}v}{\sqrt{2}}, m_{d}=\frac{G_{d}v}{\sqrt{2}} 
+		\end{equation}
+
+	The second and third generations have similar mass terms. For the case of the neutrinos, since there is no right handed neutrino in the SM the neutrinos that do exist remain massless.
+	
+	Finally, the coupling constants, $G$, and the fermion masses are not predicted by the SM, so they must be measured and added to the model.
+
+\section{Beyond the Standard Model}
+Several experiments have validated the SM to a great accuracy. However, we know the SM to be incomplete as it does not provide answers to questions like the origin of neutrino masses, the existence of dark matter, or that of dark energy.
 
 \section{Lepton universality}
 One of the current assumptions of the SM is that electron, muon, and tau couplings are the same when interacting weakly. This is often referred to as lepton universality. 
