--- a/data/myReference.bib
+++ b/data/myReference.bib
@@ -16,50 +16,306 @@
   Year                     = {2017}
 }
 
-@Article{einstein,
-  Title                    = {{Zur Elektrodynamik bewegter K{\"o}rper}. ({German})
- [{On} the electrodynamics of moving bodies]},
-  Author                   = {Albert Einstein},
-  Journal                  = {Annalen der Physik},
-  Year                     = {1905},
-  Number                   = {10},
-  Pages                    = {891--921},
-  Volume                   = {322},
-
-  Doi                      = {http://dx.doi.org/10.1002/andp.19053221004}
+@article{PhysRevLett.111.191801,
+  title = {Measurement of Form-Factor-Independent Observables in the Decay ${B}^{0}\ensuremath{\rightarrow}{K}^{*0}{\ensuremath{\mu}}^{\mathbf{+}}{\ensuremath{\mu}}^{\mathbf{\ensuremath{-}}}$},
+  author = {Aaij, R. and others},
+  collaboration = {LHCb Collaboration},
+  journal = {Phys. Rev. Lett.},
+  volume = {111},
+  issue = {19},
+  pages = {191801},
+  numpages = {8},
+  year = {2013},
+  month = {Nov},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.111.191801},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.111.191801}
 }
 
-@Article{WAGFJ,
-  author  = {George T. Gilbert and Rhonda L. Hatcher},
-  title   = {Wagering in Final Jeopardy!},
-  journal = {Mathematics Magazine},
-  year    = {1994},
-  volume  = {67},
-  number  = {4},
-  pages   = {268-277},
-  month   = {October},
+@Article{Aaij2016,
+author={The LHCb collaboration},
+title = {Angular analysis of the ${B}^{0}\ensuremath{\rightarrow}{K}^{*0}{\ensuremath{\mu}}^{\mathbf{+}}{\ensuremath{\mu}}^{\mathbf{\ensuremath{-}}}$ decay using 3 fb−1 of integrated luminosity},
+journal={Journal of High Energy Physics},
+year={2016},
+month={Feb},
+day={16},
+volume={2016},
+number={2},
+pages={104},
+issn={1029-8479},
+doi={10.1007/JHEP02(2016)104},
+url={https://doi.org/10.1007/JHEP02(2016)104},
 }
 
-@Electronic{ANCONS,
-  Title                    = {AnimeCons.com - {A}nime {C}onventions and {G}uests},
-  HowPublished             = {Web},
-  Organization             = {AnimeCons},
-  Year                     = {2015},
-
-  Owner                    = {sroberson},
-  Timestamp                = {2016.07.21}
+@inproceedings{Abdesselam:2016llu,
+      author         = "Abdesselam, A. and others",
+      title          = "{Angular analysis of $B^0 \to K^\ast(892)^0 \ell^+
+                        \ell^-$}",
+      booktitle      = "{Proceedings, LHCSki 2016 - A First Discussion of 13 TeV
+                        Results: Obergurgl, Austria, April 10-15, 2016}",
+      collaboration  = "Belle",
+      year           = "2016",
+      eprint         = "1604.04042",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "BELLE-CONF-1603",
+      SLACcitation   = "%%CITATION = ARXIV:1604.04042;%%"
 }
 
-@Electronic{ARCADIA,
-  Title                    = {Results - {A}rcadia {F}estival of {B}ands},
-  HowPublished             = {Web},
-  Month                    = {November},
-  Organization             = {Wold of Pageantry},
-  Url                      = {http://worldofpageantry.com/forums/viewtopic.php?f=1&t=19809},
-  Year                     = {2011},
-
-  Owner                    = {sroberson},
-  Timestamp                = {2016.08.05}
+@article{PhysRevLett.113.151601,
+  title = {Test of Lepton Universality Using ${B}^{+}\ensuremath{\rightarrow}{K}^{+}{\ensuremath{\ell}}^{+}{\ensuremath{\ell}}^{\ensuremath{-}}$ Decays},
+  author = {Aaij, R. and others},
+  collaboration = {LHCb Collaboration},
+  journal = {Phys. Rev. Lett.},
+  volume = {113},
+  issue = {15},
+  pages = {151601},
+  numpages = {10},
+  year = {2014},
+  month = {Oct},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.113.151601},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.113.151601}
 }
 
-@Comment{jabref-meta: databaseType:bibtex;}
+@Article{Aaij2017,
+author="{The LHCb collaboration}",
+title="Test of lepton universality with $B_{0} \rightarrow K^{*0}l^{+}l^{−}$ decays",
+journal="Journal of High Energy Physics",
+year="2017",
+month="Aug",
+day="16",
+volume="2017",
+number="8",
+pages="55",
+issn="1029-8479",
+doi="10.1007/JHEP08(2017)055",
+url="https://doi.org/10.1007/JHEP08(2017)055"
+}
+
+@Article{D’Amico2017,
+author="D'Amico, Guido
+and Nardecchia, Marco
+and Panci, Paolo
+and Sannino, Francesco
+and Strumia, Alessandro
+and Torre, Riccardo
+and Urbano, Alfredo",
+title="Flavour anomalies after the RK∗ measurement",
+journal="Journal of High Energy Physics",
+year="2017",
+month="Sep",
+day="04",
+volume="2017",
+number="9",
+pages="10",
+doi="10.1007/JHEP09(2017)010",
+url="https://doi.org/10.1007/JHEP09(2017)010"
+}
+
+@Article{Capdevila2018,
+author="Capdevila, Bernat
+and Crivellin, Andreas
+and Descotes-Genon, S{\'e}bastien
+and Matias, Joaquim
+and Virto, Javier",
+title="Patterns of New Physics in $b {\rightarrow} sl^{}l^{−}$ transitions in the light of recent data",
+journal="Journal of High Energy Physics",
+year="2018",
+month="Jan",
+day="19",
+volume="2018",
+number="1",
+pages="93",
+issn="1029-8479",
+doi="10.1007/JHEP01(2018)093",
+url="https://doi.org/10.1007/JHEP01(2018)093"
+}
+
+@article{NatFCNC,
+  Author = {Archilli, F. and Bettler, M. -O. and Owen, P. and Petridis, K. A.},
+  Date = {2017/06/07/online},
+  Day = {07},
+  Journal = {Nature},
+  Month = {06},
+  Pages = {221 EP  -},
+  Publisher = {Macmillan Publishers Limited, part of Springer Nature. All rights reserved. SN  -},
+  Title = {Flavour-changing neutral currents making and breaking the standard model},
+  Ty = {JOUR},
+  Url = {https://doi.org/10.1038/nature21721},
+  Volume = {546},
+  Year = {2017},
+  url = {https://doi.org/10.1038/nature21721}
+  }
+
+  @article{Dalchenko:2017shg,
+      author         = "Abdullah, Mohammad and Dalchenko, Mykhailo and Dutta,
+                        Bhaskar and Eusebi, Ricardo and Huang, Peisi and Kamon,
+                        Teruki and Rathjens, Denis and Thompson, Adrian",
+      title          = "{Bottom-quark fusion processes at the LHC for probing
+                        Z′ models and $B$ -meson decay anomalies}",
+      journal        = "Phys. Rev.",
+      volume         = "D97",
+      year           = "2018",
+      number         = "7",
+      pages          = "075035",
+      doi            = "10.1103/PhysRevD.97.075035",
+      eprint         = "1707.07016",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1707.07016;%%"
+}
+  @article{Buras:2013,
+      author         = "Andrzej J. Buras and Jennifer Girrbach",
+      title          = "{Left-handed Z' and Z FCNC quark couplings facing new $b \rightarrow s \mu^{+} mu^{-}$ data}",
+      journal        = "J. High Energ. Phys. ",
+      volume         = "9",
+      year           = "2013",
+      doi            = "10.1007/JHEP12(2013)009",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1309.2466;%%"
+}
+
+@article{201757,
+title = "Search for narrow resonances in dilepton mass spectra in proton-proton collisions at $\sqrt{s}=13$ TeV and combination with 8 TeV data",
+journal = "Physics Letters B",
+volume = "768",
+pages = "57 - 80",
+year = "2017",
+issn = "0370-2693",
+doi = "https://doi.org/10.1016/j.physletb.2017.02.010",
+url = "http://www.sciencedirect.com/science/article/pii/S0370269317301004",
+author = "The CMS Collaboration",
+}
+
+@article{Sirunyan:2018exx,
+      author         = "Sirunyan, Albert M and others",
+      title          = "{Search for high-mass resonances in dilepton final states
+                        in proton-proton collisions at $\sqrt{s}=$ 13 TeV}",
+      collaboration  = "CMS",
+      journal        = "JHEP",
+      volume         = "06",
+      year           = "2018",
+      pages          = "120",
+      doi            = "10.1007/JHEP06(2018)120",
+      eprint         = "1803.06292",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-EXO-16-047, CERN-EP-2018-027",
+      SLACcitation   = "%%CITATION = ARXIV:1803.06292;%%"
+}
+
+@Article{Aaij2014,
+author="{The LHCb collaboration}",
+title="Differential branching fractions and isospin asymmetries of $B{\rightarrow} K^{*}\mu^{+}\mu^{−}$ decays",
+journal="Journal of High Energy Physics",
+year="2014",
+month="Jun",
+day="23",
+volume="2014",
+number="6",
+pages="133",
+issn="1029-8479",
+doi="10.1007/JHEP06(2014)133",
+url="https://doi.org/10.1007/JHEP06(2014)133"
+}
+
+@Article{Aaij20162,
+author="{The LHCb collaboration}",
+title="Measurements of the S-wave fraction in $B^{0} {\rightarrow} K^{+}\pi^{−}\mu^{+}\mu^{−}$ decays and the $B^{0} {\rightarrow} K^{*0}(892)\mu^{+}\mu^{−}$ differential branching fraction",
+journal="Journal of High Energy Physics",
+year="2016",
+month="Nov",
+day="08",
+volume="2016",
+number="11",
+pages="47",
+issn="1029-8479",
+doi="10.1007/JHEP11(2016)047",
+url="https://doi.org/10.1007/JHEP11(2016)047"
+}
+
+@Article{Altmannshofer2017,
+author="Altmannshofer, Wolfgang
+and Niehoff, Christoph
+and Stangl, Peter
+and Straub, David M.",
+title="Status of the $B\rightarrow K^{*}mu ^{+}mu^{-}$ anomaly after Moriond 2017",
+journal="The European Physical Journal C",
+year="2017",
+month="Jun",
+day="07",
+volume="77",
+number="6",
+pages="377",
+issn="1434-6052",
+doi="10.1140/epjc/s10052-017-4952-0",
+url="https://doi.org/10.1140/epjc/s10052-017-4952-0"
+}
+
+@Article{Bordone2016,
+author="Bordone, Marzia
+and Isidori, Gino
+and Pattori, Andrea",
+title="On the standard model predictions for $R_{K}$ and $R_{K^{*}}$",
+journal="The European Physical Journal C",
+year="2016",
+month="Aug",
+day="08",
+volume="76",
+number="8",
+pages="440",
+issn="1434-6052",
+doi="10.1140/epjc/s10052-016-4274-7",
+url="https://doi.org/10.1140/epjc/s10052-016-4274-7"
+}
+
+@article{PhysRevD.96.055008,
+  title = {Interpreting hints for lepton flavor universality violation},
+  author = {Altmannshofer, Wolfgang and Stangl, Peter and Straub, David M.},
+  journal = {Phys. Rev. D},
+  volume = {96},
+  issue = {5},
+  pages = {055008},
+  numpages = {6},
+  year = {2017},
+  month = {Sep},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.96.055008},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.96.055008}
+}
+
+@article{PhysRevD.89.095033,
+  title = {Quark flavor transitions in ${L}_{\mu}-{L}_{\tau}$ models},
+  author = {Altmannshofer, Wolfgang and Gori, Stefania and Pospelov, Maxim and Yavin, Itay},
+  journal = {Phys. Rev. D},
+  volume = {89},
+  issue = {9},
+  pages = {095033},
+  numpages = {11},
+  year = {2014},
+  month = {May},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.89.095033},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.89.095033}
+}
+
+@techreport{ATLAS-CONF-2016-045,
+      title         = "{Search for new high-mass resonances in the dilepton final
+                       state using proton-proton collisions at $\sqrt{s}$ = 13 TeV
+                       with the ATLAS detector}",
+      author        = {"The ATLAS Collaboration"},
+      institution   = "CERN",
+      collaboration = "ATLAS Collaboration",
+      address       = "Geneva",
+      number        = "ATLAS-CONF-2016-045",
+      month         = "Aug",
+      year          = "2016",
+      reportNumber  = "ATLAS-CONF-2016-045",
+      url           = "http://cds.cern.ch/record/2206127",
+}
+
+
+
+
