Chapter 3 First Draft

--- a/data/myReference.bib
+++ b/data/myReference.bib
@@ -316,6 +316,95 @@ url="https://doi.org/10.1140/epjc/s10052-016-4274-7"
       url           = "http://cds.cern.ch/record/2206127",
 }
 
+@book{Breskin:1244506,
+      author        = "Breskin, Amos and Voss, Rüdiger",
+      title         = "{The CERN Large Hadron Collider: Accelerator and
+                       Experiments}",
+      publisher     = "CERN",
+      address       = "Geneva",
+      year          = "2009",
+      url           = "http://cds.cern.ch/record/1244506",
+}
+@article{Chatrchyan:2008aa,
+      author         = "Chatrchyan, S. and others",
+      title          = "{The CMS experiment at the CERN LHC}",
+      collaboration  = "CMS",
+      journal        = "JINST",
+      volume         = "3",
+      year           = "2008",
+      pages          = "S08004",
+      doi            = "10.1088/1748-0221/3/08/S08004",
+      SLACcitation   = "%%CITATION = JINST,3,S08004;%%"
+}
+
+@article{1748-0221-3-08-S08003,
+  author={G Aad and others},
+  title="{The ATLAS Experiment at the CERN Large Hadron Collider}",
+  journal={Journal of Instrumentation},
+  volume={3},
+  number={08},
+  pages={S08003},
+  url={http://stacks.iop.org/1748-0221/3/i=08/a=S08003},
+  year={2008},
+}
+
+@article{Alves:2008zz,
+      author         = "Alves, Jr., A. Augusto and others",
+      title          = "{The LHCb Detector at the LHC}",
+      collaboration  = "LHCb",
+      journal        = "JINST",
+      volume         = "3",
+      year           = "2008",
+      pages          = "S08005",
+      doi            = "10.1088/1748-0221/3/08/S08005",
+      SLACcitation   = "%%CITATION = JINST,3,S08005;%%"
+}
+
+@article{Aamodt:2008zz,
+      author         = "Aamodt, K. and others",
+      title          = "{The ALICE experiment at the CERN LHC}",
+      collaboration  = "ALICE",
+      journal        = "JINST",
+      volume         = "3",
+      year           = "2008",
+      pages          = "S08002",
+      doi            = "10.1088/1748-0221/3/08/S08002",
+      SLACcitation   = "%%CITATION = JINST,3,S08002;%%"
+}  
+
+@Comment{For Images}
+@MISC{LHC-schematic,
+    author = {Kurt Andersen and Todd Eberle},
+    title = {The Genesis 2.0 Project},
+    year = {2010},
+    note = {[Online; accessed May 29, 2019},
+    howpublished = "\url{http://media.vanityfair.com/photos/54cbf6ad1ca1cf0a23ac6c85/master/w_690,c_limit/image.jpg}"
+} 
+
+@MISC{CMS-schematic,
+    author = {Tai Sakuma},
+    title = {A cutaway diagram of the CMS detector},
+    year = {2013},
+    note = {[Online; accessed May 29, 2019},
+    howpublished = "\url{https://en.wikipedia.org/wiki/Compact_Muon_Solenoid}"
+} 
+
+@article{Chatrchyan:2012xi,
+      author         = "Chatrchyan, Serguei and others",
+      title          = "{Performance of CMS muon reconstruction in $pp$ collision
+                        events at $\sqrt{s}=7TeV$}",
+      collaboration  = "CMS Collaboration",
+      journal        = "JINST",
+      volume         = "7",
+      pages          = "P10002",
+      doi            = "10.1088/1748-0221/7/10/P10002",
+      year           = "2012",
+      eprint         = "1206.4071",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.ins-det",
+      reportNumber   = "CMS-MUO-10-004, CERN-PH-EP-2012-173",
+      SLACcitation   = "%%CITATION = ARXIV:1206.4071;%%",
+}
 
 
 
