--- a/TAMUTemplateSP18.tex
+++ b/TAMUTemplateSP18.tex
@@ -116,7 +116,7 @@
 
 \include{data/section1}
 \include{data/section2}
-%\include{data/section3}
+\include{data/section3}
 %\include{data/section4}
 %The next line is the format for inserting new sections.
 %Replace the name "newsection"  with the name of your
