--- a/data/section1.tex
+++ b/data/section1.tex
@@ -22,6 +22,9 @@
 \chapter{\uppercase {Introduction}}
 
 In progress...
+
+%According to Einstein’s famous equation E = mc2, energy and mass are in- terchangeable. Therefore, in order to produce heavy particles, a large amount of energy is required. The LHC has been designed and constructed to produce highly energetic pp collisions in which a variety of elementary particles may be produced. High energy collisions also enable the study of extremely small distance scales.
+%Heavy particles produced in the pp collision typically decay very rapidly. Highly advanced detectors, such as ATLAS, are needed to observe and measure the properties of their decay products. From the particles which are eventu- ally detected and measured, the properties of their parent particles may be deduced, enabling the study of SM particles such as the the W and Z bosons and top quark, or hypothesized particles such as leptoquarks.
 %A possible approach in the search for new particles involves performing precise measurements of the properties of known decays of hadrons that are accurately described by the SM. In this case, processes that occur via the weak force -such as the decay of a kaon (a hadron containing a strange quark) or of a b hadron (which contains a bottom quark) are particularly interesting. As a consequence of QFT, such decays can occur through transient particles that have a physical mass larger than the amount of mass-energy available from the decaying particle. These transient particles are referred to as "virtual". Heavy new particles can cause large deviations from the SM predictions of the decay rate and of the dynamics of the decay products. (from Nature paper https://www.nature.com/articles/nature21721.pdf) 
 
 % The wealth of data on rare leptonic and semileptonic $b$ hadron decays that have been accumulated at the LHC so far allows for the SM Cabibbo-Kobayashi-Maskawa picture of flavor and $CP$ violation to be tested with unprecedent sensitivity. Interestingly, current data on rare $b\rightarrow s l l$ decays show an intriguing pattern of deviations frm the SM predictions for branching ratios and angular distributions. The latest global fits find tha the data consistently points with high significance to a nonstandard effect that can be described by a four-fermion contact interaction $C_{9}(\bar{s}\gamma^{\nu}P_{L}b)(\bar{\mu}\gamma_{\nu}\mu)$. Right now the main obstacle towards consclusively establishing a beyond-SM effect is our inability to exclude large hadronic effects as the origin of the apparent discrepancies. In this respect, observables....
